# Controle-O

./: .gitignore  README.md  camera.py  detectar_maos.py  main.py  maos.py  pyproject.toml  webcam.sh
aprendizado/: InjetandoModulo.py  InterfaceCTK.py  InterfaceDPG.py  detectar-maos.py  webcam.sh
