[project]
name = "controle-o"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "dearpygui>=2.3",
    "evdev>=1.9.3",
    "mediapipe==0.10.9",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
]
